[package]
name = "random_video_server"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = ">=4.0"
actix-files = ">=0.6"
walkdir = ">=2.3"
rand = ">=0.8.4"
serde = { version = ">=1.0", features = ["derive"] }
toml = ">=0.8"
dirs = ">=5.0"
glob = ">=0.3"
clap = { version = ">=4.5.9", features = ["derive"] }
